<resources>
    <string name="app_name">Discourse-android</string>
    <string name="label_loading">Loading</string>
    <string name="topics_error_message">Oops, something bad happened</string>
    <string name="topics_error_retry">RETRY</string>
    <string name="minutes_zero">Just now</string>
    <string name="topics">Topics</string>
    <string name="gradient">Gradient</string>
    <string name="topic">Topic</string>
    <string name="add_topic">Add topic</string>
    <string name="button_create_text">Create an account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="mainText">Civilized discussion for your</string>
    <string name="logo_discourse">logo Discourse</string>
    <string name="hint_username">Username</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="create_your_account">Create your account</string>
    <string name="register">Register</string>
    <string name="login_on_discourse">Login on Discourse</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="recover_password">Recover password</string>
    <string name="back_to_login">Back to login</string>
    <string name="send_email">Send email</string>
    <string name="error_empty">\"This field cannot be empty\"</string>
    <string name="error_short">\"Password is too short (minimum is 10 characters)\"</string>
    <string name="message_sign_up">\"User created\"</string>
    <string name="user_not_found">User not found, please sign up</string>
    <string name="error_unauthorized">Unauthorized. Response code: 403</string>
    <string name="error_server">Server error. Response code: 500</string>
    <string name="reset_success">Please check your email to finish the process</string>
    <string name="reset_failure">User not found, please sign up</string>
    <string name="search">Search</string>
    <string name="all_tab_bar">All</string>
    <string name="posts_tab_bar">Posts</string>
    <string name="users_tab_bar">Users</string>
    <string name="sear_title">Search</string>
    <string name="posts_title">Posts</string>
    <string name="users_title">Users</string>
    <string name="cancel">Cancel</string>
    <string name="create_topic">Create topic</string>
    <string name="login">Login</string>
    <string name="topic_title_hint">Type your topic title here</string>
    <string name="create">Create</string>
    <string name="error_title_short">Title is too short (minimum is 15 characters)</string>
    <string name="error_reply_short">Title is too short (minimum is 20 characters)</string>
    <string name="message_topic_created">Your topic has been created</string>
    <string name="message_reply_created">Your reply has been sended</string>
    <string name="new_reply">New reply</string>
    <string name="reply">Reply</string>
    <string name="topic_reply_hint">Type your reply here</string>
    <plurals name="years">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>

    <plurals name="months">
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>

    <plurals name="days">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
</resources>