<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/topicFragmentContainer"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".UI.topics.TopicsFragment">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/sear_title"
                app:titleTextColor="@color/black"

                >
                <TextView
                    android:id="@+id/toolbar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/search"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    >

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/search"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/gradient"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:contentDescription="@string/gradient"
                android:src="@drawable/gradient_topics"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                >

            </ImageView>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/segmentController"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintTop_toBottomOf="@id/gradient"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/black"
                app:tabPaddingEnd="20dp"
                app:tabPaddingStart="20dp"
                app:tabSelectedTextColor="@color/black"
                app:tabTextColor="@color/warmGrey">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/allSelector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_tab_bar" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/postsSelector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts_tab_bar" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/usersSelector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/users_tab_bar" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/postsRecyclerViewSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/segmentController"
                android:layout_marginTop="8dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>