<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".UI.login.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:padding="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/gradient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/gradient"
            android:src="@drawable/gradient_login" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="135dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        android:src="@drawable/discourse_logo"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:layout_marginTop="80dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:text="@string/mainText"
        android:lineSpacingExtra="10sp"/>

    <TextSwitcher
        android:id="@+id/text_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/main_text"
        app:layout_constraintTop_toBottomOf="@id/main_text"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_button"
        android:layout_width="286dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@+id/text_switcher"
        app:layout_constraintStart_toStartOf="@id/main_text"
        app:layout_constraintEnd_toEndOf="@id/main_text"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        app:cornerRadius="4dp"
        android:textColor="@color/white"
        android:text="@string/button_create_text"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/create_account_button"
        app:layout_constraintEnd_toEndOf="@id/create_account_button"
        android:layout_marginBottom="66dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_have_an_account"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:padding="0dp"
            android:layout_width="50dp"
            android:layout_height="30dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textAllCaps="false"
            android:text="@string/log_in"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>