<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/formSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/scrollview">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/createText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/inputSignInUsername"
                android:layout_marginTop="32dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:text="@string/login_on_discourse"/>

            <EditText
                android:id="@+id/inputSignInUsername"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createText"
                android:inputType="text"
                android:autofillHints="@string/hint_username" />

            <EditText
                android:id="@+id/inputSignInPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputSignInUsername"
                android:inputType="textPassword"
                android:autofillHints="@string/hint_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recover_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/blue"
            app:cornerRadius="4dp"
            android:textColor="@color/textColor"
            android:text="@string/forgot_your_password"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textAllCaps="false"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/blue"
            app:cornerRadius="4dp"
            android:textColor="@color/white"
            android:text="@string/login"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>