<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topic_create_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".UI.topics.create_topic.CreateTopicActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbar_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/create_topic"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:padding="0dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                app:layout_constraintTop_toTopOf="@id/toolbar_text"
                app:layout_constraintBottom_toBottomOf="@id/toolbar_text"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="18sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_button"
                android:layout_width="98dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/toolbar_text"
                app:layout_constraintBottom_toBottomOf="@id/toolbar_text"
                android:backgroundTint="@color/blue"
                app:cornerRadius="4dp"
                android:textColor="@color/white"
                android:text="@string/create"
                android:textAllCaps="false" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/gradient"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:src="@drawable/gradient_topics"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:contentDescription="@string/gradient" />

    <EditText
        android:id="@+id/inputCreateTopic"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/topic_title_hint"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gradient"
        android:inputType="text"
        android:autofillHints="@string/topic_title_hint" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fragmentLoadingContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <include
            android:id="@+id/viewLoading"
            layout="@layout/view_loading"
            android:visibility="invisible" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>