<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="0dp"
    tools:context=".UI.login.SignUpActivity"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:padding="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/gradient"
                android:layout_width="95dp"
                android:layout_height="28dp"
                android:contentDescription="@string/logo_discourse"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/discourse_logo" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:icon="@drawable/ic_back_arrow"
                app:iconTint="@color/blue"
                android:textAllCaps="false"
                android:textSize="18sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/formSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/scrollview">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/createText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="@id/inputSignUpUsername"
                        android:layout_marginTop="32dp"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        android:text="@string/create_your_account"/>

                    <EditText
                        android:id="@+id/inputSignUpUsername"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/createText"
                        android:inputType="text"/>


                    <EditText
                        android:id="@+id/inputSignUpName"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/inputSignUpUsername"
                        android:inputType="text"/>
                    <EditText
                        android:id="@+id/inputSignUpEmail"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:inputType="textEmailAddress"
                        app:layout_constraintTop_toBottomOf="@id/inputSignUpName"/>
                    <EditText
                        android:id="@+id/inputSignUpPassword"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/inputSignUpEmail"
                        android:inputType="textPassword"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        app:cornerRadius="4dp"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textAllCaps="false"/>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <include
        android:id="@+id/viewLoading"
        layout="@layout/view_loading"
        android:visibility="invisible" />

</RelativeLayout>
